# airlang

./: .gitignore  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
airfold/endpoint/: groups.yaml  metrics.yaml  metrics_all_time.yaml  metrics_total.yaml  models.yaml
airfold/pipes/: aggregate_1min.yaml  high_processing_time.yaml
airfold/sources/: events.yaml  prices.csv  prices.yaml
