[project]
name = "airlang"
version = "0.1.0"
description = "Airfold LLM monitoring"
readme = "README.md"
authors = [
    { name = "Constantine Peresypkin", email = "constantine@airfold.co" },
]
dependencies = [
    "openai",
    "airfold-cli",
    "requests",
    "pandas",
    "numpy",
    "typer",
    "rich",
    "plotly",
    "streamlit",
    "streamlit-extras",
]
requires-python = ">=3.10, <4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "build",
    "isort",
    "black<24",
    "mypy",
    "pytest",
    "pytest-env",
    "pytest-dotenv",
    "pytest-docker",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py310"]
include = "\\.pyi?$"
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.yaml
  |Dockerfile
  |venv.*
)/
'''

[tool.isort]
profile = "black"
